--- a/src/astro-custom-layout-components/Box/index.astro
+++ b/src/astro-custom-layout-components/Box/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Box.css';
 
-import type { RmUnitType } from '../Types';
+import type { RmUnitType } from '../Types.ts';
 
 interface Props {
   padding?: RmUnitType; //"var(--s1)"
