--- a/src/astro-custom-layout-components/Center/index.astro
+++ b/src/astro-custom-layout-components/Center/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Center.css';
 
-import type { RmUnitType } from '../Types';
+import type { RmUnitType } from '../Types.ts';
 
 interface Props {
   max?: RmUnitType;
