--- a/src/astro-custom-layout-components/Reel/index.astro
+++ b/src/astro-custom-layout-components/Reel/index.astro
@@ -1,5 +1,5 @@
 ---
-import type { RmUnitType } from '../Types';
+import type { RmUnitType } from '../Types.ts';
 
 interface Props {
   itemWidth?: 'auto' | RmUnitType; //"250px"
