--- a/src/astro-custom-layout-components/Sidebar/index.astro
+++ b/src/astro-custom-layout-components/Sidebar/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Sidebar.css';
 
-import type { Percentage, RmUnitType } from '@repo/styles/Types';
+import { type Percentage, type RmUnitType } from '../Types.ts';
 
 /**
  * @module sidebar-l
