--- a/src/astro-custom-layout-components/Stack/index.astro
+++ b/src/astro-custom-layout-components/Stack/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Stack.css';
 
-import type { RmUnitType } from '../Types';
+import type { RmUnitType } from '../Types.ts';
 interface Props {
   space?: RmUnitType; //"var(--s000)"
   recursive?: boolean; //false
