--- a/src/astro-custom-layout-components/Switcher/index.astro
+++ b/src/astro-custom-layout-components/Switcher/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Switcher.css';
 
-import type { RmUnitType } from '../Types';
+import type { RmUnitType } from '../Types.ts';
 
 interface Props {
   threshold?: RmUnitType; //"var(--measure)"
