--- a/src/components/ClusterExample.astro
+++ b/src/components/ClusterExample.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster } from '#astro-custom-layout-components/index.js';
+import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
 
 function generateRandomString() {
   const length = 8;
