--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster } from '#astro-custom-layout-components/index.js';
+import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
 // import { DropDown as HeadlessUI } from '#ui/react/DropDown.tsx';
 import NavDropDown from '#ui/web-components/NavDropDown.astro';
 
