--- a/src/components/HeaderLink.astro
+++ b/src/components/HeaderLink.astro
@@ -1,7 +1,7 @@
 ---
 import type { HTMLAttributes } from 'astro/types';
 
-import { Cluster } from '#astro-custom-layout-components/index.js';
+import { Cluster } from '#astro-custom-layout-components/index.ts';
 type Props = HTMLAttributes<'a'> & {
   slug?: string;
   children: unknown;
