--- a/src/components/MixedStyles.astro
+++ b/src/components/MixedStyles.astro
@@ -1,5 +1,5 @@
 ---
-import { Box } from '#astro-custom-layout-components/index.js';
+import { Box } from '#astro-custom-layout-components/index.ts';
 ---
 
 <style>
