--- a/src/components/TagContainer.astro
+++ b/src/components/TagContainer.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Cluster, Icon } from '#astro-custom-layout-components/index.js';
+import { Box, Cluster, Icon } from '#astro-custom-layout-components/index.ts';
 interface Props {
   tags: string[];
   tagCounts?: Record<string, number>;
