--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import { Center, Cover } from '#astro-custom-layout-components/index.js';
+import { Center, Cover } from '#astro-custom-layout-components/index.ts';
 import type { RmUnitType } from '#astro-custom-layout-components/Types.js';
 import BaseHead from '#components/BaseHead.astro';
 import Footer from '#components/Footer.astro';
