--- a/src/layouts/SimpleLayout.astro
+++ b/src/layouts/SimpleLayout.astro
@@ -1,7 +1,7 @@
 ---
 // import { z } from 'astro:content';
 import BaseHead from '#components/BaseHead.astro';
-// import { Cover, Center, Box, Stack } from '#astro-custom-layout-components/index.js';
+// import { Cover, Center, Box, Stack } from '#astro-custom-layout-components/index.ts';
 // import type { RmUnitType } from '@cc/Types.js';
 
 // import Header from '#components/Header.astro';
