--- a/src/pages/demo/grid-demo.astro
+++ b/src/pages/demo/grid-demo.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from 'astro:assets';
 
-import { Frame, Grid } from '#astro-custom-layout-components/index.js';
+import { Frame, Grid } from '#astro-custom-layout-components/index.ts';
 import Card from '#components/Card.astro';
 import Layout from '#layouts/Layout.astro';
 
