--- a/src/pages/demo/imposter-demo.astro
+++ b/src/pages/demo/imposter-demo.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Imposter } from '#astro-custom-layout-components/index.js';
+import { Box, Imposter } from '#astro-custom-layout-components/index.ts';
 import Layout from '#layouts/Layout.astro';
 ---
 
