--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import Box from '#astro-custom-layout-components/Box/index.astro';
-import { Stack } from '#astro-custom-layout-components/index.js';
+import { Stack } from '#astro-custom-layout-components/index.ts';
 import Layout from '#layouts/Layout.astro';
 // import AppDrawer from '#ui/web-components/AppDrawer.astro';
 ---
