--- a/src/astro-custom-layout-components/Cluster/index.astro
+++ b/src/astro-custom-layout-components/Cluster/index.astro
@@ -5,7 +5,7 @@ import type {
   AlignItemsTypes,
   JustifyContentTypes,
   RmUnitType,
-} from '@repo/styles/Types';
+} from '../Types.ts';
 
 // const LIST = 'list'
 
