--- a/src/astro-custom-layout-components/Imposter/index.astro
+++ b/src/astro-custom-layout-components/Imposter/index.astro
@@ -1,7 +1,7 @@
 ---
 import './Imposter.css';
 
-import type { RmUnitType } from '../Types';
+import type { RmUnitType } from '../Types.ts';
 
 interface Props {
   breakout?: boolean; // Whether the element is allowed to break out of the container over which it is positioned
