--- a/src/pages/demo/switcher-demo.astro
+++ b/src/pages/demo/switcher-demo.astro
@@ -1,5 +1,5 @@
 ---
-import { Box, Switcher } from '#astro-custom-layout-components/index.js';
+import { Box, Switcher } from '#astro-custom-layout-components/index.ts';
 import Layout from '#layouts/Layout.astro';
 ---
 
