--- a/src/ui/astro/modal/Modal.astro
+++ b/src/ui/astro/modal/Modal.astro
@@ -1,6 +1,6 @@
 ---
 // intentinoally disruptive
-// import { Switcher, Box, Cover } from '#astro-custom-layout-components/index.js';
+// import { Switcher, Box, Cover } from '#astro-custom-layout-components/index.ts';
 // import { isOpen } from '#store/index.ts';
 
 interface Props {
