--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,19 +1,19 @@
 ---
 import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
-// import { DropDown as HeadlessUI } from '#ui/react/DropDown.tsx';
-import NavDropDown from '#ui/web-components/NavDropDown.astro';
 
+// import { DropDown as HeadlessUI } from '#ui/react/DropDown.tsx';
+// import NavDropDown from '#ui/web-components/NavDropDown.astro';
 import HeaderLink from './HeaderLink.astro';
 
-// import NavDropDown from '#ui/react/Select.tsx'
+//  import NavDropDown from '#ui/react/Select.tsx'
 ---
 
 <Box padding="var(--s1)" borderWidth="0">
   <!-- <Cluster justify="space-between"> -->
 
-  <Box padding="0" borderWidth="2px">
+  <!-- <Box padding="0" borderWidth="2px">
     <NavDropDown />
-  </Box>
+  </Box> -->
   <!-- <Box padding="0" borderWidth="1px">
       <HeadlessUI client:only="react" transition:persist /></Box
     > -->
