--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -32,6 +32,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
       <Header />
 
       <Center max={centerWidth}>
+        <h4>{title}</h4>
         <slot />
       </Center>
       <Footer />
