--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -1,17 +1,14 @@
 ---
 import { getCollection } from 'astro:content';
 
-import { Box,Stack } from '#astro-custom-layout-components/index.ts';
+import { Box, Stack } from '#astro-custom-layout-components/index.ts';
 import Card from '#components/Card/index.astro';
 import Layout from '#layouts/Layout.astro';
 
 export const prerender = true;
 
 export async function getStaticPaths() {
-  const publishsedPosts = await getCollection(
-    'blog',
-    ({ data }) => data.draft !== true,
-  );
+  const publishsedPosts = await getCollection('blog');
 
   const uniqueTags = [
     ...new Set(publishsedPosts.map(({ data }) => data.tags ?? []).flat()),
