--- a/src/styles/GlobalStyles.astro
+++ b/src/styles/GlobalStyles.astro
@@ -7,7 +7,7 @@ import './utility-classes.css';
 import './modular-scale.css';
 import './columns.css';
 import './modular-scale.css';
-// import './layoutStyles/box.css';
+import './layoutStyles/box.css';
 import './utility-classes.css';
 import './global.css';
 // import './syntax-hilite.css';
