--- a/src/pages/ui.astro
+++ b/src/pages/ui.astro
@@ -1,9 +1,9 @@
 ---
-import ComponentLibrary from '#helpers/ComponentLibrary.astro';
+import TopLevelPages from '#components/TopLevelPages.astro';
 import Layout from '#layouts/Layout.astro';
 ---
 
 <!-- heroImage="/blog-placeholder-about.jpg" -->
-<Layout title="ui" description="Lorem ipsum dolor sit amet">
-  <ComponentLibrary />
+<Layout title="Top Level Pages" description="Lorem ipsum dolor sit amet">
+  <TopLevelPages />
 </Layout>
