--- a/src/pages/demo/cluster-demo.astro
+++ b/src/pages/demo/cluster-demo.astro
@@ -3,6 +3,6 @@ import ClusterExample from '#components/ClusterExample.astro';
 import Layout from '#layouts/Layout.astro';
 ---
 
-<Layout>
+<Layout title="Cluster Demo">
   <ClusterExample />
 </Layout>
