--- a/src/components/Dialouge.astro
+++ b/src/components/Dialouge.astro
@@ -8,7 +8,7 @@ import ConfetiBtn from './ConfettiButton.astro';
 <Box>
   <Center>
     <Stack>
-      <div class="pushRight"><ConfetiBtn /></div>
+      <div><ConfetiBtn /></div>
       <div class="pushRight"><CloseBtn /></div>
       <h4>Dialouge Box</h4>
       <div>
@@ -24,3 +24,16 @@ import ConfetiBtn from './ConfettiButton.astro';
     </Stack>
   </Center>
 </Box>
+
+<!-- <wa-dialog label="Dialog" with-header with-footer id="dialog-overview">
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+  <wa-button slot="footer" variant="brand" data-dialog="close"
+    >Close</wa-button
+  >
+</wa-dialog> -->
+<!-- <script>
+  const dialog = document.querySelector('#dialog-overview');
+  const openButton = dialog.nextElementSibling;
+
+  openButton.addEventListener('click', () => (dialog.open = true));
+</script> -->
