--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,9 +2,9 @@
 import { Box, Cluster } from '#astro-custom-layout-components/index.ts';
 //  import NavDropDown from '#ui/react/Select.tsx'
 import DemoMenu from '#components/DemoMenu.astro';
-// import { DropDown as HeadlessUI } from '#ui/react/DropDown.tsx';
-import NavDropDown from '#ui/web-components/NavDropDown.astro';
 
+// import { DropDown as HeadlessUI } from '#ui/react/DropDown.tsx';
+// import NavDropDown from '#ui/web-components/NavDropDown.astro';
 import HeaderLink from './HeaderLink.astro';
 ---
 
