--- a/src/components/TopLevelPages.astro
+++ b/src/components/TopLevelPages.astro
@@ -1,9 +1,7 @@
 ---
-import { z } from 'astro:content';
-
 import { layoutDemoPages, topLevelPages } from '#lib/getPages.ts';
 
-const regexHasSubPages = /^\/[^/]*\/./;
+// const regexHasSubPages = /^\/[^/]*\/./;
 
 // const fileNameRegex = /([^/]+)$/;
 // const pagesRegExp = /pages\/(.+)/;
