--- a/src/components/cq/CqCard.astro
+++ b/src/components/cq/CqCard.astro
@@ -1,32 +1,17 @@
 ---
-import ThumbNail from './400x300.svg';
+import ThumbNail from '#assets/400x300.svg';
+import { Box } from '#astro-custom-layout-components/index.ts';
+
+interface Props {
+  title?: string;
+}
+
+const { title = 'Card titel in here' } = Astro.props;
 ---
 
-<div class="layout__item">
-  <div class="card">
-    <div class="card-thumb">
-      <ThumbNail />
-    </div>
-    <div class="card-content">
-      <h3>Card title in here</h3>
-    </div>
-  </div>
-</div>
-
-<style>
-  /* define the container type.
- We can also define the name (not mandatory but recommended) */
-
-  .layout__item {
-    container-type: inline-size;
-    container-name: card;
-  }
-
-  @container card (min-width: 180px) {
-    .card {
-      display: flex;
-      gap: 1rem;
-      outline: dotted 2px deeppink;
-    }
-  }
-</style>
+<Box borderWidth="0" padding="0">
+  <ThumbNail width="200" height="150" />
+</Box>
+<Box borderWidth="0" padding="0">
+  <p>{title}</p>
+</Box>
