--- a/src/components/Card/index.astro
+++ b/src/components/Card/index.astro
@@ -38,7 +38,7 @@ const { title, pubDate, description, author, cover } = blogdata.data;
 
 const authObj = await getEntry('authors', author.id);
 
-const { id: authId, data: authData } = authObj;
+// const { id: authId, data: authData } = authObj;
 ---
 
 <article class="card">
@@ -48,7 +48,7 @@ const { id: authId, data: authData } = authObj;
       <a slot="left" href={`/posts/${slug}`}
         ><h3 class="truncate">{title}</h3></a
       >
-      <a slot="right" href={`/writer/${authId}`}>{authData.name}</a>
+  {  authObj &&   <a slot="right" href={`/writer/${authObj.id}`}>{authObj.data.name}</a>}
     </CardTop>
 
     <div class="myMask">
